# docs_query_tool

./: .cursorignore  .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  config.py  docker-compose.yml  embed_docs.py  embed_utils.py  env.example  init.sh  logging_setup.py  main.py  migrate_to_pgvector.py  model_call.py  pyproject.toml  retrieval.py
docker/: base.Dockerfile
embed/: Dockerfile  embed.py  embed_utils.py  entrypoint.sh  pyproject.toml
migrate/: Dockerfile  migrate.py  pyproject.toml
query/: Dockerfile  query.py
retrieval/: main.py  retrieval_utils.py
services/embed/: Dockerfile  embed_utils.py  extraction_utils.py  pyproject.toml
services/migrate/: Dockerfile  pyproject.toml
services/shared/: pyproject.toml
shared/: pyproject.toml
shared/shared/: utils.py
tests/: test_docker.py
