[project]
name = "docs-query-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "anyio>=4.13.0",
    "google-genai>=1.75.0",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.8",
    "langchain-google-genai>=4.2.2",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "notebook>=7.5.6",
    "pydantic-settings>=2.14.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "notebook>=7.1.3",
    "ruff>=0.15.12",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true



