[project]
name = "docs-query-tool"
version = "0.1.0"
description = "A tool to query the docs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "notebook>=7.1.3",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.workspace]
members = [
    "embed",
]


