[project]
name = "embed"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "langchain-core>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
]


[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true